--- a/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: ingress-nginx
-      version: 4.11.3
+      version: 4.11.2
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
@@ -29,7 +29,7 @@ spec:
       service:
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
-          io.cilium/lb-ipam-ips: "192.168.1.204"
+          lbipam.cilium.io/ips: "192.168.1.204"
         externalTrafficPolicy: Cluster
       ingressClassResource:
         name: external
