--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: ingress-nginx
-      version: 4.11.3
+      version: 4.11.2
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
@@ -24,12 +24,6 @@ spec:
   values:
     fullnameOverride: ingress-nginx-internal
     controller:
-      podAnnotations:
-        traffic.sidecar.istio.io/includeInboundPorts: ""
-        traffic.sidecar.istio.io/excludeInboundPorts: "80,443"
-        traffic.sidecar.istio.io/excludeOutboundIPRanges: "10.96.0.0/16,10.69.0.0/16"
-      labels:
-        sidecar.istio.io/inject: "false"
       service:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.1.202"
@@ -40,49 +34,13 @@ spec:
         name: internal
         default: true
         controllerValue: k8s.io/internal
-      opentelemetry:
-        enabled: true
-        name: opentelemetry
-        image:
-          registry: registry.k8s.io
-          image: ingress-nginx/opentelemetry-1.25.3
-          ## for backwards compatibility consider setting the full image url via the repository value below
-          ## use *either* current default registry/image or repository format or installing chart by providing the values.yaml will fail
-          ## repository:
-          tag: v20240813-b933310d
-          digest: sha256:f7604ac0547ed64d79b98d92133234e66c2c8aade3c1f4809fed5eec1fb7f922
-          distroless: true
-        containerSecurityContext:
-          runAsNonRoot: true
-          # -- The image's default user, inherited from its base image `cgr.dev/chainguard/static`.
-          runAsUser: 65532
-          allowPrivilegeEscalation: false
-          seccompProfile:
-            type: RuntimeDefault
-          capabilities:
-            drop:
-              - ALL
-          readOnlyRootFilesystem: true
-        resources: { }
       admissionWebhooks:
         objectSelector:
           matchExpressions:
             - key: ingress-class
               operator: In
-              values: [ "internal" ]
+              values: ["internal"]
       config:
-        enable-opentelemetry: "true"
-        opentelemetry-operation-name: "HTTP $request_method $service_name $uri"
-        opentelemetry-trust-incoming-span: "true"
-        otlp-collector-host: "default-collector.default.svc.cluster.local"
-        otlp-collector-port: "4317"
-        otel-max-queuesize: "2048"
-        otel-schedule-delay-millis: "5000"
-        otel-max-export-batch-size: "512"
-        otel-service-name: "nginx-proxy" # Opentelemetry resource name
-        otel-sampler: "AlwaysOn" # Also: AlwaysOff, TraceIdRatioBased
-        otel-sampler-ratio: "0.5"
-        otel-sampler-parent-based: "true"
         client-body-buffer-size: 100M
         client-body-timeout: 120
         client-header-timeout: 120
@@ -93,13 +51,11 @@ spec:
         keep-alive: 120
         log-format-escape-json: "true"
         log-format-upstream: >
-          {"msec": "$msec", "connection": "$connection", "connection_requests": "$connection_requests", "pid": "$pid", "request_id": "$request_id",
-            "request_length": "$request_length", "remote_addr": "$remote_addr", "remote_user": "$remote_user", "remote_port": "$remote_port", "time_local": "$time_local",
-            "time_iso8601": "$time_iso8601", "request": "$request", "request_uri": "$request_uri", "args": "$args", "status": "$status", "body_bytes_sent": "$body_bytes_sent",
-            "bytes_sent": "$bytes_sent", "http_referer": "$http_referer", "http_user_agent": "$http_user_agent", "http_x_forwarded_for": "$http_x_forwarded_for", "http_host": "$http_host",
-            "server_name": "$server_name", "request_time": "$request_time", "upstream": "$upstream_addr", "upstream_connect_time": "$upstream_connect_time", "upstream_header_time": "$upstream_header_time",
-            "upstream_response_time": "$upstream_response_time", "upstream_response_length": "$upstream_response_length", "upstream_cache_status": "$upstream_cache_status", "ssl_protocol": "$ssl_protocol",
-            "ssl_cipher": "$ssl_cipher", "scheme": "$scheme", "request_method": "$request_method", "server_protocol": "$server_protocol", "pipe": "$pipe", "gzip_ratio": "$gzip_ratio", "http_cf_ray": "$http_cf_ray"}
+          {"time": "$time_iso8601", "remote_addr": "$proxy_protocol_addr", "x_forwarded_for": "$proxy_add_x_forwarded_for",
+          "request_id": "$req_id", "remote_user": "$remote_user", "bytes_sent": $bytes_sent, "request_time": $request_time,
+          "status": $status, "vhost": "$host", "request_proto": "$server_protocol", "path": "$uri", "request_query": "$args",
+          "request_length": $request_length, "duration": $request_time, "method": "$request_method", "http_referrer": "$http_referer",
+          "http_user_agent": "$http_user_agent"}
         proxy-body-size: 0
         proxy-buffer-size: 16k
         ssl-protocols: TLSv1.3 TLSv1.2
