--- a/kubernetes/apps/openebs-system/openebs/app/helmrelease.yaml
+++ b/kubernetes/apps/openebs-system/openebs/app/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: openebs
-      version: 4.1.0
+      version: 4.1.1
       sourceRef:
         kind: HelmRepository
         name: openebs
@@ -44,5 +44,5 @@ spec:
       hostpathClass:
         enabled: true
         name: openebs-hostpath
-        isDefaultClass: true
+        isDefaultClass: false
         basePath: /var/openebs/local
