--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,26 +4,26 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:VTMORDnOVs/AiGw=,iv:iPwzNmBzu2d+s47c9Zr3f5mlgvo6uzTh3x6W2KxIZcg=,tag:Oc19gPA1IAqZ7HKdkL65vw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:eKkneB85IoCjtqsmPAiPNoX+1kM/Hg==,iv:aI8AdckKc/BcuTSOPRie+qoo3G4xXmcWqAubgOaJTRk=,tag:n1+Z8pH+lDsdzbB9JhxhhA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:buBQYxNnZuqqomzjTNn1N89Y3p/yFuAy420p4RzTgBKkCamY,iv:lgGwG61F46GpgPvvhuvhJnqsEglGxa0laqjsJybHmoM=,tag:IwZ7M/PqjpvFhl037neuAg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:NwafUZ+1aH7m690=,iv:pgXZFuvbNxpru+XxwXiQQLGa6mr+WniBdGhfd0WSO2g=,tag:X3mr0sxPz77W1LZFUs+vPA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:t7ZVcnHlGS2VO6a8ttQmmHijPaIFAQ==,iv:5RGUI6imulcfULT6GSAomGBJ5RtYOhuumS/EjuoO/ls=,tag:Y+bLSv06kLd5D8R00cpnDQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:MG/A7KwMVPPYrzKLkRy9dDhJ5k/sONHYM+vATBbZ8qgRUDGB,iv:1O3AP08IFmHgirNG5KjAcFtgfq4vRdoHDWtJGFbtcI0=,tag:zy1pdbO50Xl+IGTGHlf9UA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
+        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLRjNSaXp3aXNUZUp1QWtq
-            QzQxR0xTWVY3bVN0VzlSRllLcHl2dm9CSm1BCnYrWkNuaE9RSU9VYi83dm1BTzNO
-            WG04SFJJSmxSTVV5R0ZFQlZ4ajVyWkEKLS0tIHZiVkY4a2MzZTYrYjRRcUJMZ2R2
-            VDVTMDVIcjZpTW5HZmUxay9vcjNpbUUKyjGqdsJUJkV3T9bE4piWUJ3CEC6aTXG5
-            /AuBW9Qn/uQ770F2B6Z7Hdv+zJdswJulLB7qkTM3SSVe5n9AxUBjAg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQeWVtVElnSWJSTGIxQTZT
+            RExmbXJ2d1M2SnFLWFRaSldGcEhQdEc2RzBrCjluOXVEaUQzZzRNcWZwSkRxbVJY
+            Q3BFdHc2RWpTMHBBbXBDODBiUkdmMzgKLS0tIENVbUh3V0pTN1hPOUN1bzFpQ0dz
+            b0J6N09RUjB4RXRYQ3ZrMmNIeW9hZVUKsrgT+IsttvPUX0OAyvbTSsDl5jLg0j+5
+            xuShTZGrPnccM1JHhVMKY+QY2ZJLabiylOm6VYDCRbPVhFmrUikfuQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-17T18:55:05Z"
-    mac: ENC[AES256_GCM,data:rLum/lok3gHwGx/x6691kSzviBKJ8FVdiy1bsf160RdTYJBCilJGQcMOXA1DUtojzUtNbyk3Mh8thzWaXtzu2HKTD5aq9GK+T2kN5wY/Wgk6M0VJ8a0FHoP2uNijnmLDwp+7nGk3bnGU2jHR7Vx33vlRFkk9Sc+/zsQwO3yF5mI=,iv:IEumrPgCce+hqPlrYFX2gTCbNBc16FfJr8MsPxw9ZUY=,tag:lSlpHvHLiQBf6BYoMbeeww==,type:str]
+    lastmodified: "2024-10-19T21:52:38Z"
+    mac: ENC[AES256_GCM,data:1cH8aBkU1VF/aCz8yDKj8vFAAUw9yYSpiLA5UltCMKj1iNEdT53e9/vPkPWPD8sV79oBc6CKJlRvnbLyokp47nav7MZnPGL29faONWA8K2Ydae0SJiv4iKfLGNInepk8R4vfAUgkLKoiY+Lxw8jh0UVP/IN/w3XEyPYfkYmosy4=,iv:qcSXr/wsYfVcnmj/9kS6OteoI4cdvZ56BCUYf225jmY=,tag:eWKJJP2MnBlVfYVwBbzGgw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
