--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:NwafUZ+1aH7m690=,iv:pgXZFuvbNxpru+XxwXiQQLGa6mr+WniBdGhfd0WSO2g=,tag:X3mr0sxPz77W1LZFUs+vPA==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:t7ZVcnHlGS2VO6a8ttQmmHijPaIFAQ==,iv:5RGUI6imulcfULT6GSAomGBJ5RtYOhuumS/EjuoO/ls=,tag:Y+bLSv06kLd5D8R00cpnDQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:MG/A7KwMVPPYrzKLkRy9dDhJ5k/sONHYM+vATBbZ8qgRUDGB,iv:1O3AP08IFmHgirNG5KjAcFtgfq4vRdoHDWtJGFbtcI0=,tag:zy1pdbO50Xl+IGTGHlf9UA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:YiNm2XTmC7r0FOs=,iv:dUarYUJde9ylZmCQuf6IvcdCvtDOGhjar5/R6gDuXws=,tag:ovXZV8IB6rV/AoGS1NU4dQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:Rt+yoFYkGesxX2gtIamYvQcCdqcsNg==,iv:uNhxMOegoQtz/jycYMc9cpOS1/nMqC77GF7Hk/e03Uo=,tag:x7hWWxG3UOyQREFa9bFTSg==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:bqyLovvaDJSsGwtRbkXgJXR9/6e8LxPad4XzG/2+SRY45r+U,iv:B3SxoCI6coEgFhGN+v7E9a3UxeUUr7AQQmyhf5lOpFY=,tag:FzdFGs31hIPprv88I80BKg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQeWVtVElnSWJSTGIxQTZT
-            RExmbXJ2d1M2SnFLWFRaSldGcEhQdEc2RzBrCjluOXVEaUQzZzRNcWZwSkRxbVJY
-            Q3BFdHc2RWpTMHBBbXBDODBiUkdmMzgKLS0tIENVbUh3V0pTN1hPOUN1bzFpQ0dz
-            b0J6N09RUjB4RXRYQ3ZrMmNIeW9hZVUKsrgT+IsttvPUX0OAyvbTSsDl5jLg0j+5
-            xuShTZGrPnccM1JHhVMKY+QY2ZJLabiylOm6VYDCRbPVhFmrUikfuQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjM1MrYmd4am9rZnV5ZGNQ
+            OE41UEE3SDlyQWlYd3FKa2Y5OWNlbU1HZVZjCms3cVFRSXFCN1ROQWNEdCtFbFI3
+            NlpnTUU5d1ZjL1dKbzNXSXZnWmVxaHcKLS0tIDkrWVNkZEV1TitJc2dNSmZDQ21R
+            WDJTdFA0MldMWTVwUVZtKzNBblJBOFUKlkPtkzJ95F+vtD9CdpduCpaWjC3KXqa0
+            VDo+r2u0oTSWWpW63S5s9O5MoZtLtCfOb/bj1n8hPE1ONTBt/zC70Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-19T21:52:38Z"
-    mac: ENC[AES256_GCM,data:1cH8aBkU1VF/aCz8yDKj8vFAAUw9yYSpiLA5UltCMKj1iNEdT53e9/vPkPWPD8sV79oBc6CKJlRvnbLyokp47nav7MZnPGL29faONWA8K2Ydae0SJiv4iKfLGNInepk8R4vfAUgkLKoiY+Lxw8jh0UVP/IN/w3XEyPYfkYmosy4=,iv:qcSXr/wsYfVcnmj/9kS6OteoI4cdvZ56BCUYf225jmY=,tag:eWKJJP2MnBlVfYVwBbzGgw==,type:str]
+    lastmodified: "2024-10-19T23:42:55Z"
+    mac: ENC[AES256_GCM,data:f8Zd5An1KoZu2/3i4pd4vsNRaxBjLKhQCHyEgi5oH2hXxuFjb57Woc8Uw4r23W6oEtHzmwPpM3ZvMzY2iT8zlQhPYwNzwMiJysekL0DLpn+/NPTSwXhiAlh10qSRxKYLb4pG85mrrwXzT0FIAvjo+Cj5kYrAUL19YLKi+NcTqtU=,iv:rTI+HYWnakg3wca/q611854SEW7lQgBnO+a3RJzhTDA=,tag:+76dczjq+2lRK/aZ8CJ4pw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
