--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -53,7 +53,7 @@ spec:
         rollOutPods: true
         ingress:
           enabled: true
-          className: internal
+          className: cilium
           annotations:
             cert-manager.io/cluster-issuer: letsencrypt-production
           hosts: [ "hubble.internal.${SECRET_DOMAIN}" ]
