--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -26,9 +26,7 @@ spec:
     controller:
       service:
         annotations:
-          io.cilium/lb-ipam-ips: "192.168.1.202"
-          lbipam.cilium.io/sharing-key: "ingress"
-          lbipam.cilium.io/sharing-cross-namespace: "forgejo,network"
+          lbipam.cilium.io/ips: "192.168.1.202"
         externalTrafficPolicy: Cluster
       ingressClassResource:
         name: internal
