--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:YiNm2XTmC7r0FOs=,iv:dUarYUJde9ylZmCQuf6IvcdCvtDOGhjar5/R6gDuXws=,tag:ovXZV8IB6rV/AoGS1NU4dQ==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:Rt+yoFYkGesxX2gtIamYvQcCdqcsNg==,iv:uNhxMOegoQtz/jycYMc9cpOS1/nMqC77GF7Hk/e03Uo=,tag:x7hWWxG3UOyQREFa9bFTSg==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:bqyLovvaDJSsGwtRbkXgJXR9/6e8LxPad4XzG/2+SRY45r+U,iv:B3SxoCI6coEgFhGN+v7E9a3UxeUUr7AQQmyhf5lOpFY=,tag:FzdFGs31hIPprv88I80BKg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:/rg57p/P2b9wqV4=,iv:+h9qWzwphefsHJSTBQKm8AMscr6nT97kgy17/KlLiMU=,tag:2lZr1Kva5uVuTF8B+l+gJw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:V3UZVTAckHvj0ZJp7HpGWmbKwAlc4A==,iv:FWyFyo1ggwJ6HyDxGTkbI+LhLYuqsj+a8TdmOJdXx2M=,tag:HGbQnCR52UzdgAtLC2jItQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:iGMvEIkFdlWs+sJD7ATT/Hne99fxTeSnsf25dKa5u7JbFkK6,iv:LZXC2/5pz/zQNB/Gn0/gv9UQk26kA8ME+AMm3raPZIY=,tag:8b9m2eBjX/ahJEkOBczTnw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjM1MrYmd4am9rZnV5ZGNQ
-            OE41UEE3SDlyQWlYd3FKa2Y5OWNlbU1HZVZjCms3cVFRSXFCN1ROQWNEdCtFbFI3
-            NlpnTUU5d1ZjL1dKbzNXSXZnWmVxaHcKLS0tIDkrWVNkZEV1TitJc2dNSmZDQ21R
-            WDJTdFA0MldMWTVwUVZtKzNBblJBOFUKlkPtkzJ95F+vtD9CdpduCpaWjC3KXqa0
-            VDo+r2u0oTSWWpW63S5s9O5MoZtLtCfOb/bj1n8hPE1ONTBt/zC70Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1N0tuT0hlTDV1bnp3cG81
+            bmM2Qit1SllFSktwR0N5QURacWZFQXFldDJvCjJHL01QblU3SW1IS1pHWTlBUjBp
+            bFpUVHFTNnVLNno0akVWbGMwd1RsRncKLS0tIGgrSGs1SWY3bk9yQ3k4eklZZ08v
+            NWRveDNnWHRua3I5dHpibXlIa3JwRUkKQXYZrIafK4GOueGHzEfs0JD31OOWmY6G
+            Rko20YN+ceoSVbtAZP2cMrhB4MXHMHTT8UBC6Zx5yvVrXK7IL226SA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-19T23:42:55Z"
-    mac: ENC[AES256_GCM,data:f8Zd5An1KoZu2/3i4pd4vsNRaxBjLKhQCHyEgi5oH2hXxuFjb57Woc8Uw4r23W6oEtHzmwPpM3ZvMzY2iT8zlQhPYwNzwMiJysekL0DLpn+/NPTSwXhiAlh10qSRxKYLb4pG85mrrwXzT0FIAvjo+Cj5kYrAUL19YLKi+NcTqtU=,iv:rTI+HYWnakg3wca/q611854SEW7lQgBnO+a3RJzhTDA=,tag:+76dczjq+2lRK/aZ8CJ4pw==,type:str]
+    lastmodified: "2024-10-19T23:57:01Z"
+    mac: ENC[AES256_GCM,data:0bxvw8MQ7niLiCKZ7zdLsXlrHllY9K7ZHGfGg9fpxRwfNuPUCNvukMw9Jj3IuLfWSgzbu8UZAYY4dHOGu9EproviaYAw0E20TWV4EU1RdEvXsCBtmZmZ/wf3DeyIv2wkVIYeo05M6jf3Z0iw0AcpPiS47d9STvWKZ5RuzpTNkok=,iv:KC6VZBpscw2xB2AAkbzpF5vyMiriZVrvqO3x02XPFIk=,tag:IWokA2WcyU9OMaAwXON0Ow==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
