--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:/rg57p/P2b9wqV4=,iv:+h9qWzwphefsHJSTBQKm8AMscr6nT97kgy17/KlLiMU=,tag:2lZr1Kva5uVuTF8B+l+gJw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:V3UZVTAckHvj0ZJp7HpGWmbKwAlc4A==,iv:FWyFyo1ggwJ6HyDxGTkbI+LhLYuqsj+a8TdmOJdXx2M=,tag:HGbQnCR52UzdgAtLC2jItQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:iGMvEIkFdlWs+sJD7ATT/Hne99fxTeSnsf25dKa5u7JbFkK6,iv:LZXC2/5pz/zQNB/Gn0/gv9UQk26kA8ME+AMm3raPZIY=,tag:8b9m2eBjX/ahJEkOBczTnw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:mCyR1+YSx91vBGw=,iv:9ke9YlepYxElx/1RbcGX7oK5yqlI8cZmnf8qkytadi0=,tag:Y2C6nZsu/a1hWgAVydbA3Q==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:PYl+UVLMPxF0OBw3cA4XoljatM9M2g==,iv:pHJGUbceJE0A9WoJLIwXPj9bajKJgpmcb+HYHP7PtOI=,tag:mGPL27KfGbZHB8293+Riug==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:KAt1xlxmczrksf2ONu3gs+DhooBOIFFRhyKSLNvmnxZD2Gm4,iv:v1N4i44nzt+dTIhjwDwYktY2CpNS6UyKAMXZ+hvFpT0=,tag:h3P3ci5BzOHW8Yqjke8oxQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1N0tuT0hlTDV1bnp3cG81
-            bmM2Qit1SllFSktwR0N5QURacWZFQXFldDJvCjJHL01QblU3SW1IS1pHWTlBUjBp
-            bFpUVHFTNnVLNno0akVWbGMwd1RsRncKLS0tIGgrSGs1SWY3bk9yQ3k4eklZZ08v
-            NWRveDNnWHRua3I5dHpibXlIa3JwRUkKQXYZrIafK4GOueGHzEfs0JD31OOWmY6G
-            Rko20YN+ceoSVbtAZP2cMrhB4MXHMHTT8UBC6Zx5yvVrXK7IL226SA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkbkdJQzNEaUFXM1A4WXRY
+            NEF2UXRLS0ttRGNaUWFpaVdzZTdMYVVVMVNrCjQ1WFRZZjZVQnIxcWxRVUxlSlpM
+            QzY0OXdkTFNNUjl2YnZNUVlOTHRFam8KLS0tIGw0RnBKSU5hT01tTzlMblFQZ0xQ
+            WHM1Z3JDSGpNbU5MWTltaXlMcC9tam8KAKoaxVk3DA8U3Ch9TgzQk+Gn4WUffCPG
+            sT/ZkIK/cUAUPcaBrlAxL6iAbrygLQ3q3mjBvfqeUZWxeSengk83GA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-19T23:57:01Z"
-    mac: ENC[AES256_GCM,data:0bxvw8MQ7niLiCKZ7zdLsXlrHllY9K7ZHGfGg9fpxRwfNuPUCNvukMw9Jj3IuLfWSgzbu8UZAYY4dHOGu9EproviaYAw0E20TWV4EU1RdEvXsCBtmZmZ/wf3DeyIv2wkVIYeo05M6jf3Z0iw0AcpPiS47d9STvWKZ5RuzpTNkok=,iv:KC6VZBpscw2xB2AAkbzpF5vyMiriZVrvqO3x02XPFIk=,tag:IWokA2WcyU9OMaAwXON0Ow==,type:str]
+    lastmodified: "2024-10-19T23:59:21Z"
+    mac: ENC[AES256_GCM,data:vQ6P/jX9flu6Psh3Pm2c/mQghG1b476RMwhFVP401qMmMUVIRKklQPpXFK8/h/oWHsE+LgWo0uG5RYygbrPJa4jo2+6LlpnHNAk08v/DQihh7DcQCIiB1n6Py+dnsKtBSyaLYO0LfD6SCCf7VRY/MT9FMTr2UPKce7AD8gbs5Wo=,iv:6vt+sr66+Ccqwu2T9gRfkFAHfKM5tQMvb06awHa0Djk=,tag:KaelMZ3VmaQJXMlkMpua/w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
