--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:mCyR1+YSx91vBGw=,iv:9ke9YlepYxElx/1RbcGX7oK5yqlI8cZmnf8qkytadi0=,tag:Y2C6nZsu/a1hWgAVydbA3Q==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:PYl+UVLMPxF0OBw3cA4XoljatM9M2g==,iv:pHJGUbceJE0A9WoJLIwXPj9bajKJgpmcb+HYHP7PtOI=,tag:mGPL27KfGbZHB8293+Riug==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:KAt1xlxmczrksf2ONu3gs+DhooBOIFFRhyKSLNvmnxZD2Gm4,iv:v1N4i44nzt+dTIhjwDwYktY2CpNS6UyKAMXZ+hvFpT0=,tag:h3P3ci5BzOHW8Yqjke8oxQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:PRVnSPhS+dowE4s=,iv:RfglKej1KVWjP0YDyhHAsty5sn06tsq2nmHnI2UvjeA=,tag:tV1eLqkNYTYyoEYdDtb+/Q==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:yn1E2Y6eitdFVNI36Lb8Da2J4Yu/vA==,iv:VHZWkR4v9r563nI9YAjDogPusK7klJbazawNkFkWaFI=,tag:Ug/kKZ/WAUhurBJoGgxE9Q==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:lXjSNCVdzjp8dyi/Ig3Of4tOoT5AXgRcTsJYPCiBuQVcaBxK,iv:ljsA39L9AFK2ktqNIzdlvKWSBy07X/qbkB7E0lFqzXI=,tag:Lr3n40VEIqouV1TcywdoHw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkbkdJQzNEaUFXM1A4WXRY
-            NEF2UXRLS0ttRGNaUWFpaVdzZTdMYVVVMVNrCjQ1WFRZZjZVQnIxcWxRVUxlSlpM
-            QzY0OXdkTFNNUjl2YnZNUVlOTHRFam8KLS0tIGw0RnBKSU5hT01tTzlMblFQZ0xQ
-            WHM1Z3JDSGpNbU5MWTltaXlMcC9tam8KAKoaxVk3DA8U3Ch9TgzQk+Gn4WUffCPG
-            sT/ZkIK/cUAUPcaBrlAxL6iAbrygLQ3q3mjBvfqeUZWxeSengk83GA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtUDVZcWlITHp3Nm1nOUho
+            clYwaCtVd3R6SWVBb2xDYlBMTFU1aHI5WUhRCk1RRU1vc2ZLbUo0ZlpNNzVYY3hK
+            OHFGZEF1dFBkcXpXbjhLdDNuWW9ud0EKLS0tIDR2UHFXQU03MFdWWEduNnEwY1Vi
+            SGZwRXpLNEdtTHJ6bFFkOUNZZEk5VTAKKrZ4dIQZHLGaMfI2Vrq6FCgX5eWAI61F
+            vozXFJei4yYdmhJ1Q984PZo5mKJDtP0KLejc802QctkRke/DhB5BYg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-19T23:59:21Z"
-    mac: ENC[AES256_GCM,data:vQ6P/jX9flu6Psh3Pm2c/mQghG1b476RMwhFVP401qMmMUVIRKklQPpXFK8/h/oWHsE+LgWo0uG5RYygbrPJa4jo2+6LlpnHNAk08v/DQihh7DcQCIiB1n6Py+dnsKtBSyaLYO0LfD6SCCf7VRY/MT9FMTr2UPKce7AD8gbs5Wo=,iv:6vt+sr66+Ccqwu2T9gRfkFAHfKM5tQMvb06awHa0Djk=,tag:KaelMZ3VmaQJXMlkMpua/w==,type:str]
+    lastmodified: "2024-10-20T03:49:54Z"
+    mac: ENC[AES256_GCM,data:topQ/40/15iysk/yHNX2Up4AEI6MKr+0ssFhCt44A+vXuA/H1/QsSSuIuwVucYFJgBTN6H+PV+Lnd3UMtiFt2Lc0rUDKSF7EnubgXouujkNoy0CbT02JsO542aomQTURH26Z1Nkzh0Cz7Ofcca7T+fotg7eVaIUm6Xs/Qt1Hq8Q=,iv:vyqi++4aniSEJMPJ1XzUhyWEqn83WPMiMt4UPvIEDnU=,tag:vpC+F5ScoKPuGuyJqkrgxw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
