--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -24,6 +24,15 @@ spec:
     - kind: ConfigMap
       name: cilium-helm-values
   values:
+    ingressController:
+      enabled: true
+      default: false
+      defaultSecretNamespace: network
+      defaultSecretName: stiforr-com-production-tls
+      loadbalancerMode: shared
+      service:
+        annotations:
+          lbipam.cilium.io/ips: 192.168.1.205
     hubble:
       enabled: true
       metrics:
