--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:PRVnSPhS+dowE4s=,iv:RfglKej1KVWjP0YDyhHAsty5sn06tsq2nmHnI2UvjeA=,tag:tV1eLqkNYTYyoEYdDtb+/Q==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:yn1E2Y6eitdFVNI36Lb8Da2J4Yu/vA==,iv:VHZWkR4v9r563nI9YAjDogPusK7klJbazawNkFkWaFI=,tag:Ug/kKZ/WAUhurBJoGgxE9Q==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:lXjSNCVdzjp8dyi/Ig3Of4tOoT5AXgRcTsJYPCiBuQVcaBxK,iv:ljsA39L9AFK2ktqNIzdlvKWSBy07X/qbkB7E0lFqzXI=,tag:Lr3n40VEIqouV1TcywdoHw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:Tc+VRKhgAE/LYhs=,iv:n7zt/e2SXd0IebaPpkCH+1/Y38Yc2C/3u+n9+IbBmTU=,tag:0vb6BgxHDC0YS/ChmwNVwQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:8HRcnkD57QqeDNDThHXADUXFBHHssw==,iv:KK71SIFxkKpwCQkK70Ncm+zNUJheuyasCHyXyRmawi4=,tag:zdNqEpAsWDdb8WYVEGZsJA==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:AbfGKFzabztmgnFErbDuhmc5396cpI72ZWLi6s4nrxnJKW9v,iv:mm2IFmYXAz+8s/o6OnTY1a9eb3gLC+mnLkKIrWr/TYE=,tag:xJxKutz4+hnu29btmLvYIQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtUDVZcWlITHp3Nm1nOUho
-            clYwaCtVd3R6SWVBb2xDYlBMTFU1aHI5WUhRCk1RRU1vc2ZLbUo0ZlpNNzVYY3hK
-            OHFGZEF1dFBkcXpXbjhLdDNuWW9ud0EKLS0tIDR2UHFXQU03MFdWWEduNnEwY1Vi
-            SGZwRXpLNEdtTHJ6bFFkOUNZZEk5VTAKKrZ4dIQZHLGaMfI2Vrq6FCgX5eWAI61F
-            vozXFJei4yYdmhJ1Q984PZo5mKJDtP0KLejc802QctkRke/DhB5BYg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBManFMY1VhNWIwR3Vsa21w
+            Mnd5ZjBsTlJ3QnFRemRpemJBSFBaY1RMNFc4ClRWNUdBS1piY2ErNmRHRnFrTFhB
+            V3NqSk0yVi9YUEJlUm9oMEhJcitFdFEKLS0tIHQ4UmhHdjFmQ1pXc05FNVdDaVpq
+            bXVTT1NLbzRsSm80aVRyVVVTWkRUSXMK2qMsy1RcoW5xAVncRJxs6aD0AxjHiW6b
+            pijaulgcXiLP2bPued1/dhvm7kyW1lYEJgXcoW753uyVmfxWqFtOgQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-20T03:49:54Z"
-    mac: ENC[AES256_GCM,data:topQ/40/15iysk/yHNX2Up4AEI6MKr+0ssFhCt44A+vXuA/H1/QsSSuIuwVucYFJgBTN6H+PV+Lnd3UMtiFt2Lc0rUDKSF7EnubgXouujkNoy0CbT02JsO542aomQTURH26Z1Nkzh0Cz7Ofcca7T+fotg7eVaIUm6Xs/Qt1Hq8Q=,iv:vyqi++4aniSEJMPJ1XzUhyWEqn83WPMiMt4UPvIEDnU=,tag:vpC+F5ScoKPuGuyJqkrgxw==,type:str]
+    lastmodified: "2024-10-20T23:23:28Z"
+    mac: ENC[AES256_GCM,data:LYrdOjs50/iMimXSZF0hRUSw4REnCReE7uHpyvfFXxE2wLZJ723N2ARMyXN6Pu/DicdcInI1ggyr46vE3rkPUkdG9KKZ9lsIXKfimYbq2IZN76A/omeYDeNPOnAYwRpAM3M66lDc5a5wd1zQ1UphrhIPFRIFSi6lpe3ACSgaxKk=,iv:JqixRu1Yfer4UOMQMNGn84pG71mxoTTxWowHAuTURlQ=,tag:tUUJxFgXmLkWSLrJ1XC4YA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
