--- a/kubernetes/bootstrap/talos/talconfig.yaml
+++ b/kubernetes/bootstrap/talos/talconfig.yaml
@@ -58,6 +58,21 @@ nodes:
           - network: 0.0.0.0/0
             gateway: "192.168.1.254"
         mtu: 1500
+  - hostname: "worker-2"
+    ipAddress: "192.168.1.178"
+    installDisk: "/dev/sda"
+    talosImageURL: factory.talos.dev/installer/ce4c980550dd2ab1b17bbf2b08801c7eb59418eafe8f279833297925d67c7515
+    controlPlane: false
+    networkInterfaces:
+      - deviceSelector:
+          hardwareAddr: "bc:24:11:0d:b8:c6"
+        dhcp: false
+        addresses:
+          - "192.168.1.178/24"
+        routes:
+          - network: 0.0.0.0/0
+            gateway: "192.168.1.254"
+        mtu: 1500
 
 # Global patches
 patches:
@@ -74,6 +89,6 @@ controlPlane:
   patches:
     - "@./patches/controller/api-access.yaml"
     - "@./patches/controller/cluster.yaml"
-#    - "@./patches/controller/disable-admission-controller.yaml"
+    - "@./patches/controller/disable-admission-controller.yaml"
     - "@./patches/controller/etcd.yaml"
 
