--- a/kubernetes/bootstrap/talos/clusterconfig/.gitignore
+++ b/kubernetes/bootstrap/talos/clusterconfig/.gitignore
@@ -3,3 +3,4 @@ talosconfig
 home-kubernetes-controller-2.yaml
 home-kubernetes-worker.yaml
 home-kubernetes-controller-3.yaml
+home-kubernetes-worker-2.yaml
