--- a/kubernetes/flux/config/gotk-pvc.yaml
+++ b/kubernetes/flux/config/gotk-pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: openebs-hostpath
+  storageClassName: nfs-client-ssd
   resources:
     requests:
       storage: 10Gi
