--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:Tc+VRKhgAE/LYhs=,iv:n7zt/e2SXd0IebaPpkCH+1/Y38Yc2C/3u+n9+IbBmTU=,tag:0vb6BgxHDC0YS/ChmwNVwQ==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:8HRcnkD57QqeDNDThHXADUXFBHHssw==,iv:KK71SIFxkKpwCQkK70Ncm+zNUJheuyasCHyXyRmawi4=,tag:zdNqEpAsWDdb8WYVEGZsJA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:AbfGKFzabztmgnFErbDuhmc5396cpI72ZWLi6s4nrxnJKW9v,iv:mm2IFmYXAz+8s/o6OnTY1a9eb3gLC+mnLkKIrWr/TYE=,tag:xJxKutz4+hnu29btmLvYIQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:Vn/1o6t4xMSgJqs=,iv:R6CXIFJpNrWJ6DyUR5EC7U7BDjkieP32c6XGAMSFZ3E=,tag:W8uzuwIpVy6UjvCvMGTNYA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:4+HAryucoDbEMpA8OsRK54kbP7jD8Q==,iv:susUexVn9SPY5XOFNqiXMkWmQnj1pHNzkLNgQQdV6e0=,tag:G5gFRizpjnPXmlSMKue7eg==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:kxy4alFdm46ABlwphx3gbbk8QjfSMQvwYpR2Kn7wegUK9nug,iv:W+1y8f+qE3xhwIw2H5bM84BCdS5I5yI7fPaOy+9BGjc=,tag:++kq0+ICqTIkP0+5sOKthQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBManFMY1VhNWIwR3Vsa21w
-            Mnd5ZjBsTlJ3QnFRemRpemJBSFBaY1RMNFc4ClRWNUdBS1piY2ErNmRHRnFrTFhB
-            V3NqSk0yVi9YUEJlUm9oMEhJcitFdFEKLS0tIHQ4UmhHdjFmQ1pXc05FNVdDaVpq
-            bXVTT1NLbzRsSm80aVRyVVVTWkRUSXMK2qMsy1RcoW5xAVncRJxs6aD0AxjHiW6b
-            pijaulgcXiLP2bPued1/dhvm7kyW1lYEJgXcoW753uyVmfxWqFtOgQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDZHRWME5EMC94M2FBWVNU
+            ZmxvN21ac2FnMnlOUDNkZDAzYmlQVG5RdUV3CmszeTczVndTWFpBTWFrRXN0M0Nu
+            VXlLRFBTTUpoZktkVkU2YXJTRXFwbG8KLS0tIDhGZUZsanUvUGNyOXpTVUdIdkFk
+            UUgxVFI5RG16OGxBd3FuVXdqRDI3SDQKHSO8fCxPw+s9fpAP1f4nJjW5v57eYfpA
+            3QWvsq0+eWti4izvFh6dTdEQppJL9Db+mYbXXedZirRxjFW8FKiH+w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-20T23:23:28Z"
-    mac: ENC[AES256_GCM,data:LYrdOjs50/iMimXSZF0hRUSw4REnCReE7uHpyvfFXxE2wLZJ723N2ARMyXN6Pu/DicdcInI1ggyr46vE3rkPUkdG9KKZ9lsIXKfimYbq2IZN76A/omeYDeNPOnAYwRpAM3M66lDc5a5wd1zQ1UphrhIPFRIFSi6lpe3ACSgaxKk=,iv:JqixRu1Yfer4UOMQMNGn84pG71mxoTTxWowHAuTURlQ=,tag:tUUJxFgXmLkWSLrJ1XC4YA==,type:str]
+    lastmodified: "2024-10-21T02:23:08Z"
+    mac: ENC[AES256_GCM,data:0c588cijoJTUGmokEdTnAytEnBDdR6bD+fOOj4aObaTLsP7yWgvMv+aVkC3P9XBZI6GafZ5NPgjwUGaBOhteSybh/GdQUF4LOEgxlW91n5nxH72Y/A5fI6qI9A/IDtZqdtcd0DWfTY1DB76MK5iNxkWd932M3nghrdSHzXzCWJE=,iv:zpq8bNZ3lXNYzT8FXgDg1DqCFkRr1qNk+9yNMFFaQqo=,tag:1fS5IjjkO9t5fkXGLJymiA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
