--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:Vn/1o6t4xMSgJqs=,iv:R6CXIFJpNrWJ6DyUR5EC7U7BDjkieP32c6XGAMSFZ3E=,tag:W8uzuwIpVy6UjvCvMGTNYA==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:4+HAryucoDbEMpA8OsRK54kbP7jD8Q==,iv:susUexVn9SPY5XOFNqiXMkWmQnj1pHNzkLNgQQdV6e0=,tag:G5gFRizpjnPXmlSMKue7eg==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:kxy4alFdm46ABlwphx3gbbk8QjfSMQvwYpR2Kn7wegUK9nug,iv:W+1y8f+qE3xhwIw2H5bM84BCdS5I5yI7fPaOy+9BGjc=,tag:++kq0+ICqTIkP0+5sOKthQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:VFTHlhAA9gFnEEo=,iv:TbQGTDeVTSbvv4y26glz4l96dZgy2KdBVpdtTkffrSA=,tag:I4KBxOMg7Z1N2czwcat2sA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:34/PNh0aJvspJilGk70PgE/AziPADw==,iv:zIG3csBffGbRDx5wb0379IScmC09BGCtHyrYsEUdvq4=,tag:Qk7hjFqDvdm19d7vVPKamQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:iql9JEDCyz5aJ1dNlXRGcVVMRhlOChiEc56jBwKDmXIJ6lN1,iv:T0vHoX0hpVUPHkeeHbsL/MgsebcvGc3B/iknsKfVolw=,tag:tU2RkOEFjFGZhs6XXhbJuw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDZHRWME5EMC94M2FBWVNU
-            ZmxvN21ac2FnMnlOUDNkZDAzYmlQVG5RdUV3CmszeTczVndTWFpBTWFrRXN0M0Nu
-            VXlLRFBTTUpoZktkVkU2YXJTRXFwbG8KLS0tIDhGZUZsanUvUGNyOXpTVUdIdkFk
-            UUgxVFI5RG16OGxBd3FuVXdqRDI3SDQKHSO8fCxPw+s9fpAP1f4nJjW5v57eYfpA
-            3QWvsq0+eWti4izvFh6dTdEQppJL9Db+mYbXXedZirRxjFW8FKiH+w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpNUpQQk5JbEtiUkdzVVRh
+            TkJhK21yczlYRUZSQll0aFlvL0ZEUzJia3o0Ck15aDlqaXk0cHBJbzllYXlocnF3
+            d2lDTXgyaEVNRitMcmJUb3pYQSs1MU0KLS0tIHE4di83clNkUlpJaWVOcFVXblhL
+            VGQwckxBWGlPU0RzOEJJMFcwVUx5ZkUKI0ZzNnS2++1KTuCbsCyRGLchcfhOR4ZG
+            9EPTy9VyNBC51IXHPI+81QxN6YUIgnnLaGSoSDPDmIgcSZmBUULHDA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T02:23:08Z"
-    mac: ENC[AES256_GCM,data:0c588cijoJTUGmokEdTnAytEnBDdR6bD+fOOj4aObaTLsP7yWgvMv+aVkC3P9XBZI6GafZ5NPgjwUGaBOhteSybh/GdQUF4LOEgxlW91n5nxH72Y/A5fI6qI9A/IDtZqdtcd0DWfTY1DB76MK5iNxkWd932M3nghrdSHzXzCWJE=,iv:zpq8bNZ3lXNYzT8FXgDg1DqCFkRr1qNk+9yNMFFaQqo=,tag:1fS5IjjkO9t5fkXGLJymiA==,type:str]
+    lastmodified: "2024-10-21T19:54:47Z"
+    mac: ENC[AES256_GCM,data:xcYouIg0DqQ+pKsaM9zTTCAte0q6LJIRrX2fPfWjcYggmJPy1NRiBbCLW7Ks3qLxno+8JQ2Ae5nlAdsWHnrziSVmtbeivEVU7PGn8xGCFETU6kiSl1BHS+pIoLnnPWTMpv98TAgX70bbqNh0uDV7jW08h0hTLX/lS7tr06PVsm8=,iv:s7vKZNXzqLekApG697nI0hQ+Iz4rV7mS3WEUm37dGow=,tag:RI6+KADAV7Sq2IwhaqfmYg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
