--- a/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
@@ -3,24 +3,4 @@ kind: Secret
 metadata:
     name: cert-manager-secret
 stringData:
-    api-token: ENC[AES256_GCM,data:GUS79OOqpZbqtvuDzJmL5G2jG6UaEAZU7TMCrhhc7esdykG/GAiQYQ==,iv:Qqy6Z/DXu2F2E/mzHTlONmAFO4os/PT5cx7sAZOLny4=,tag:Qgz1lp/P3+dV0/Q+TlXZig==,type:str]
-sops:
-    kms: []
-    gcp_kms: []
-    azure_kv: []
-    hc_vault: []
-    age:
-        - recipient: age1qd2k83kj5ket4qp63rfa456pt5amx5j58sx0dk204crfsmjqvpks4jucs2
-          enc: |
-            -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBqcWJEcHVjd0VrTldCamFN
-            NjF6VHlCalRDUVJ2bVk3dEZtcmpKUHIyU0ZrCi9nay9nR3lOcHgwQjFjSSsyM0lQ
-            L1owc0dURHdWSDZ3a2tSeDhvOHpmNHcKLS0tIFhFTDZSSEkwc1hzUllBNkxEdi96
-            R0MzQ094ZW0ya1ZSQzFOZEUwL1MvYVEKaMmwLrDS+RIz4P3vNNlGqc1Y1Kc6Cz5V
-            M84eWsp62whsFvtdU0Q2a5pyhPB4/ooaHZLA6YEvtCGTIsYlk19Mbw==
-            -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-10-21T19:54:47Z"
-    mac: ENC[AES256_GCM,data:zCT5fbAvIM5j2ruhMa8uCb3llDiGM4OF+cHyWOzZuyjXclUCzpagF89Ex0LA1zSnwtL0EIRGvmjvpVkNfz3aGfMD5wS1Z4NKe9su2BD5XgxpV1kU8b8Vs4NY73+n+ahULTBVcQ1aM4777uK/VAJ5Rlh3TYdksVno3u5SUufhDTI=,iv:S2p/IXrgy4xRbLn8grBtuUYNP7X5P0SWvPcX5+qtdc0=,tag:kI/Mb/+pHGzqj+XODV+aRw==,type:str]
-    pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.9.1
+    api-token: g7541CDl4QtUOcWeULO1kdIsHQRoiCzFtNr3GNpJ
